Stop tracking venv/ folder

--- a/ecom/store/templates/home.html
+++ b/ecom/store/templates/home.html
@@ -52,7 +52,7 @@
                                     
                                     <!-- Product price-->
                                     Price: ${{ product.price }}<br>
-                                    Brand: {{ product.Brand }}
+                                    Brand: {{ product.brand }}
                                     
                                 </div>
                             </div>
