Feat: Create user profile with support for multiple addresses

--- a/ecom/store_manager/templates/list_storage.html
+++ b/ecom/store_manager/templates/list_storage.html
@@ -136,7 +136,10 @@
     </table>
 </div>
 
- 
+{% else %}
+<p>You are not authorized to view this form.</p>
+{% endif %}
+
 {% endblock content %}
 
  
