--- a/ecom/store/templates/navbar.html
+++ b/ecom/store/templates/navbar.html
@@ -8,6 +8,8 @@
     
     <div class="container px-4 px-lg-5">
         <a class="navbar-brand" href="{% url 'home' %}">Phoneix</a>
+
+        
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
@@ -40,9 +42,20 @@
                     <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
                 </button>
             </form>
-           
-           
-                    {{ user.username }}  <!-- Display the user's name -->
+
+            {% if user.is_authenticated %}
+            <a class="nav-link" href="{% url 'user_profile' %}">
+                <!-- Display user profile photo if exists, otherwise show a default image -->
+                {% if user.profile_photo %}
+                    <img src="{{ user.profile_photo.url }}" alt="Profile Photo" class="rounded-circle" style="width: 40px; height: 40px; object-fit: cover;">
+                {% else %}
+                    <img src="https://via.placeholder.com/30" alt="Default Profile Photo" class="rounded-circle" style="width: 30px; height: 30px; object-fit: cover;">
+                {% endif %}
+                <br>
+                {{ user.username }}
+            </a>
+        {% endif %}
+        
               
              {% endif %}
           
