--- a/ecom/store/templates/navbar.html
+++ b/ecom/store/templates/navbar.html
@@ -35,13 +35,24 @@
                 </li>
             </ul>
             {% if user.is_authenticated %}
-            <form class="d-flex">
-                <button class="btn btn-outline-dark" type="submit">
-                    <i class="bi-cart-fill me-1"></i>
-                    Cart
-                    <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                </button>
-            </form>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                    <!-- Other navbar items -->
+            
+                    <div class="d-flex">
+                        <a href="{% url 'view_cart' %}" class="btn btn-outline-dark">
+                            <i class="bi-cart-fill me-1"></i>
+                            Cart
+                            <span class="badge bg-dark text-white ms-1 rounded-pill">
+                                {{ cart_count }}
+                            </span>
+                        </a>
+                    </div>
+                </div>
+            </nav>
+            {% endif %}
+
+
 
             {% if user.is_authenticated %}
             <a class="nav-link" href="{% url 'user_profile' %}">
@@ -57,7 +68,6 @@
         {% endif %}
         
               
-             {% endif %}
           
         </div>
     </div>
