[Feature] Checkout page done

--- a/ecom/store/templates/cart.html
+++ b/ecom/store/templates/cart.html
@@ -121,7 +121,7 @@
                                 <strong>Total:</strong>
                                 <strong>${{ total }}</strong>
                             </p>
-                            <a href="" class="btn btn-primary w-100">Proceed to Checkout</a>
+                            <a href="{% url 'checkout' %}" class="btn btn-primary w-100">Proceed to Checkout</a>
                         </div>
                     </div>
                 </div>
