--- a/ecom/store/templates/manage_address_checkout.html
+++ b/ecom/store/templates/manage_address_checkout.html
@@ -15,7 +15,9 @@
 </header>
 
 
-    <div class="container mt-5">
+     
+    <div class="container mt-5" style="width: 500px; border: 2px solid black; padding: 20px; border-radius: 10px;">
+
          
         <div class="container mt-4">
             <h2>{% if address %}Edit{% else %}Add{% endif %} Address</h2>
@@ -54,5 +56,5 @@
             </form>
         </div>
     </div>
- 
+ <br>
 {% endblock %}
