--- a/ecom/store/templates/profile.html
+++ b/ecom/store/templates/profile.html
@@ -88,7 +88,7 @@
                                 <span class="text-muted">{{ address.state }} - {{ address.postal_code }}</span>
                             </div>
                             <div>
-                                <a href="{% url 'edit_address' address.id %}" class="btn btn-sm btn-outline-secondary me-2">Edit</a>
+                                <a href="{% url 'manage_address_profile' address.id %}" class="btn btn-sm btn-outline-secondary me-2">Edit</a>
                                 <a href="{% url 'delete_address' address.id %}" class="btn btn-sm btn-outline-danger">Delete</a>
                             </div>
                         </li>
