--- a/ecom/store_manager/templates/admin_navbar.html
+++ b/ecom/store_manager/templates/admin_navbar.html
@@ -17,6 +17,7 @@
  
                 <li class="nav-item"><a class="nav-link active" aria-current="page" ><strong>Welcome Back {{ user.username }}</strong> </a></li>
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'admin_dashboard' %}">Home</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'store_manager_orders' %}">Orders</a></li>
              
 
               
