--- a/ecom/store/templates/cart.html
+++ b/ecom/store/templates/cart.html
@@ -47,7 +47,7 @@
                                     <strong>{{ item.variant.product.name }}</strong><br>
                                     <small class="text-muted">ID: {{ item.variant.product.id }}</small>
                                 </td>
-         {% endcomment %}
+                                {% endcomment %}
 
                                 <td>
                                     <strong>
@@ -59,10 +59,11 @@
                                 </td>
                                                         <!-- Variant Details -->
                                 <td>
-                                    <span class="text-capitalize">{{ item.variant.colour.colour }}</span>, 
+                                    <span class="text-capitalize">{{ item.variant.colour.colour }}</span>-
                                     {{ item.variant.storage.capacity }}GB
                                 </td>
-        
+                                
+
                                 <!-- Quantity -->
                                 <td>
                                     <form method="post" action="{% url 'update_cart_quantity' item.id %}" class="d-inline">
@@ -131,7 +132,7 @@
             <!-- Empty Cart -->
             <div class="text-center py-5">
                 <h4>Your cart is empty.</h4>
-                <a href="{% url 'product_list' %}" class="btn btn-outline-dark mt-3">Continue Shopping</a>
+                <a href="{% url 'home' %}" class="btn btn-outline-dark mt-3">Continue Shopping</a>
             </div>
             {% endif %}
         </div>
