--- a/ecom/store_manager/templates/dashboard.html
+++ b/ecom/store_manager/templates/dashboard.html
@@ -63,6 +63,17 @@
           </div>
         </div>
       </div>
+
+      <div class="col-md-4">
+        <div class="card text-center">
+          <div class="card-header">
+            Total Users
+          </div>
+          <div class="card-body">
+            <h3>{{ total_orders}}</h3>
+          </div>
+        </div>
+      </div>
   
       <!-- Total Categories Card -->
       <div class="col-md-4">
